fix: fix page overflows on mobile screens

--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 /* Vue transitions */
 .slide-fade-enter-active, .slide-fade-leave-active {
   transition: opacity .3s cubic-bezier(0,.65,.35,1), transform .3s cubic-bezier(0,.65,.35,1);
